--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,23 +1,59 @@
 *{
     margin: 0;
     padding: 0;
+    color: black;
+    font-family: 'Oswald', sans-serif;
 }
 
 main{
     display: grid;
-    border: 5px solid black;
-    grid-template: repeat(3, 450px) / 250px;
+    min-height: 100vh;
+    grid-template: 1fr 2fr 1fr / 100px 250px 250px;
 }
 .container{
-    min-width: 500px;
+    background-image: url(../resources/media/grid-3230205_1920.jpg);
     margin: auto;
 }
 
-.box{
-    background-color:beige;
+.flex-header{
+    grid-area: 1/1/3/1;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 5px solid black;
 }
 
 .a{
+    border-radius: 2.5%;
+    
+    padding-top: 10px;
     text-align: center;
-    grid-area: 1/1/2/3;
+    grid-area: 2/2/3/3;
+    position: relative;
+}
+.b{
+    
+    text-align: center;
+    grid-area: 3/1/3/3;
+}
+
+header{
+    position: sticky;
+    top: 0;
+}
+
+.flex-header{
+    background-color:whitesmoke;
+    background-blend-mode: color;
+}
+
+.name{
+    font-size: 64px;
+    font-family: 'Russo One', sans-serif;
+}
+
+.passion{
+    font-size: 54px;
+    font-family: 'Russo One', sans-serif;
 }
